--- a/examples/EspReceiver/Makefile
+++ b/examples/EspReceiver/Makefile
@@ -5,10 +5,10 @@ FQBN = esp32:esp32:tinypico
 PORT = /dev/ttyUSB1
 
 all:
-	arduino-cli compile --fqbn esp32:esp32:tinypico .
+	arduino-cli compile --fqbn $(FQBN) .
 
 flash: 
-	arduino-cli upload -p /dev/ttyUSB1 --fqbn esp32:esp32:tinypico
+	arduino-cli upload -p /dev/ttyUSB1 --fqbn $(FQBN)
 
 clean:
 	rm -rf obj
