--- a/examples/EspReceiver/Makefile
+++ b/examples/EspReceiver/Makefile
@@ -5,13 +5,10 @@ FQBN = esp32:esp32:tinypico
 PORT = /dev/ttyUSB1
 
 all:
-	arduino-cli compile -b $(FQBN) .
+	arduino-cli compile --fqbn $(FQBN) . --warnings "all"
 
 flash: 
-	arduino-cli upload -p /dev/ttyUSB1 -b $(FQBN)
-
-clean:
-	rm -rf obj
+	arduino-cli upload --port /dev/ttyUSB1 -b $(FQBN)
 
 edit:
 	vim $(SKETCH).ino
