--- a/examples/EspReceiver/Makefile
+++ b/examples/EspReceiver/Makefile
@@ -8,7 +8,7 @@ all:
 	arduino-cli compile --fqbn $(FQBN) . --warnings "all"
 
 flash: 
-	arduino-cli upload --port /dev/ttyUSB1 -b $(FQBN)
+	arduino-cli upload --port /dev/ttyUSB1 --fqbn $(FQBN)
 
 edit:
 	vim $(SKETCH).ino
