More incomplete sketch work

--- a/examples/incomplete/BabyApeF411Sbus/Makefile
+++ b/examples/incomplete/BabyApeF411Sbus/Makefile
@@ -4,8 +4,9 @@ FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F411CEUX,usb=CDCgen
 
 PORT = /dev/ttyACM0
 
+LIB = ../../..
+
 OBJ = $(PWD)/obj
-LIB = ../../
 DFU = $(OBJ)/$(SKETCH).dfu 
 HEX = $(OBJ)/$(SKETCH).ino.hex
 SRC = $(LIB)/src
@@ -14,7 +15,7 @@ all: $(DFU)
 all: $(HEX)
 
 $(DFU): $(HEX)
-	../../utils/dfuse-pack.py -i $(HEX) $(DFU)
+	$(LIB)/utils/dfuse-pack.py -i $(HEX) $(DFU)
 
 $(HEX): $(SKETCH).ino $(SRC)/*.h $(SRC)/*/*.h
 	arduino-cli compile -b $(FQBN) --libraries $(LIB) --build-path $(OBJ)
