Renamed Skydongle => EspNowReceiver

--- a/examples/EspNowReceiver/Makefile
+++ b/examples/EspNowReceiver/Makefile
@@ -1,13 +1,11 @@
-SKETCH = Skydongle
+SKETCH = EspNowReceiver
 
 FQBN = esp32:esp32:tinypico
 
 PORT = /dev/ttyUSB1
 
-HACKFLIGHT = ../../../Hackflight
-
 all:
-	arduino-cli compile --fqbn $(FQBN) . --warnings "all" --libraries $(HACKFLIGHT)
+	arduino-cli compile --fqbn $(FQBN) . --warnings "all"
 
 flash: 
 	arduino-cli upload --port $(PORT) --fqbn $(FQBN)
