HappyModelF411 working with Mock IMU, RX, ESC

--- a/examples/incomplete/HappyModelF411/Makefile
+++ b/examples/incomplete/HappyModelF411/Makefile
@@ -1,6 +1,6 @@
 SKETCH = HappyModelF411
 
-FQBN = STMicroelectronics:stm32:GenF7:pnum=GENERIC_F722RETX,usb=CDCgen
+FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F411CEUX,usb=CDCgen
 
 PORT = /dev/ttyACM0
 
