Begin migrating SBUS code

--- a/examples/BetaFpvF405Sbus/Makefile
+++ b/examples/BetaFpvF405Sbus/Makefile
@@ -5,19 +5,20 @@ FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
 PORT = /dev/ttyACM0
 
 OBJ = $(PWD)/obj
-LIB = ../../
+HFLIB = ../../
+SBLIB = ../../..
 DFU = $(OBJ)/$(SKETCH).dfu 
 HEX = $(OBJ)/$(SKETCH).ino.hex
-SRC = $(LIB)/src
+SRC = $(HFLIB)/src
 
 # all: $(DFU)
 all: $(HEX)
 
 $(DFU): $(HEX)
-	$(LIB)/utils/dfuse-pack.py -i $(HEX) $(DFU)
+	$(HFLIB)/utils/dfuse-pack.py -i $(HEX) $(DFU)
 
 $(HEX): $(SKETCH).ino $(SRC)/*.h $(SRC)/*/*.h
-	arduino-cli compile --fqbn $(FQBN) --libraries $(LIB) --build-path $(OBJ) --warnings "all"
+	arduino-cli compile --fqbn $(FQBN) --libraries $(HFLIB),$(SBLIB) --build-path $(OBJ) --warnings "all"
 	rm -f *.bin *.elf
 
 unbrick: $(DFU)
