Restart HappyModelF411 sketch

--- a/examples/incomplete/HappyModelF411/Makefile
+++ b/examples/incomplete/HappyModelF411/Makefile
@@ -5,7 +5,8 @@ FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F411CEUX,usb=CDCgen
 PORT = /dev/ttyACM0
 
 OBJ = $(PWD)/obj
-LIB = ../../..
+HFLIB = ../../..
+LIB = ../../../..
 DFU = $(OBJ)/$(SKETCH).dfu 
 HEX = $(OBJ)/$(SKETCH).ino.hex
 SRC = $(LIB)/src
@@ -14,10 +15,10 @@ all: $(DFU)
 all: $(HEX)
 
 $(DFU): $(HEX)
-	$(LIB)/utils/dfuse-pack.py -i $(HEX) $(DFU)
+	$(HFLIB)/utils/dfuse-pack.py -i $(HEX) $(DFU)
 
-$(HEX): $(SKETCH).ino $(SRC)/*.h $(SRC)/*/*.h
-	arduino-cli compile --fqbn $(FQBN) --libraries $(LIB) --build-path $(OBJ)
+$(HEX): $(SKETCH).ino
+	arduino-cli compile --fqbn $(FQBN) --libraries $(HFLIB),$(LIB) --build-path $(OBJ)
 	rm -f *.bin *.elf
 
 unbrick: $(DFU)
