--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=Includes Ground-Control Station
 category=Other
 url=https://github.com/simondlevy/Hackflight
 architectures=*
-includes=board.h,debug.h,msp.h
+includes=debug.h,msp.h
