--- a/examples/BetaFpvF405Sbus/Cargo.toml
+++ b/examples/BetaFpvF405Sbus/Cargo.toml
@@ -37,5 +37,5 @@ crate-type = ["staticlib"]
 
 [profile.release]
 codegen-units = 1 # better optimizations
-debug = true # symbols are nice and they don't increase the size on Flash
+debug = false 
 lto = true # better optimizations
