renamed:    dfu-touch.py -> ../../utils/dfu-touch.py

--- a/examples/LadybugSbus/Makefile
+++ b/examples/LadybugSbus/Makefile
@@ -16,7 +16,7 @@ $(DFU): $(SKETCH).ino $(SRC)/*.h $(SRC)/*/*.h
 	arduino-cli compile --fqbn $(FQBN) --libraries $(HFLIB),$(LIB) --build-path obj --warnings "all"
 
 upload:
-	./dfu-touch.py $(PORT)
+	../../utils/dfu-touch.py $(PORT)
 	/home/levys@ad.wlu.edu/Documents/Arduino/hardware/arduino-STM32L4/stm32l4/tools/linux/stm32l4-upload \
 	   	0x1209 0x6669 obj/$(SKETCH).ino.dfu 10
 
