--- a/examples/LadybugSbus/Makefile
+++ b/examples/LadybugSbus/Makefile
@@ -17,12 +17,8 @@ $(DFU): $(SKETCH).ino $(SRC)/*.h $(SRC)/*/*.h
 
 upload:
 	../../utils/dfu-touch.py $(PORT)
-	/home/levys@ad.wlu.edu/Documents/Arduino/hardware/arduino-STM32L4/stm32l4/tools/linux/stm32l4-upload \
+	$(HOME)/Documents/Arduino/hardware/arduino-STM32L4/stm32l4/tools/linux/stm32l4-upload \
 	   	0x1209 0x6669 obj/$(SKETCH).ino.dfu 10
-
-newload:
-	"/home/levys@ad.wlu.edu/Documents/Arduino/hardware/arduino-STM32L4/stm32l4/tools/linux/stm32l4-upload" \
-		"0x1209" "0x6669" "/tmp/arduino/sketches/9D347098F0AF0079EDD6B02866593ADC/I2CScanner.ino.dfu" 10
 
 clean:
 	rm -rf obj
