--- a/examples/LadybugSbus/Makefile
+++ b/examples/LadybugSbus/Makefile
@@ -7,7 +7,6 @@ PORT = /dev/ttyACM0
 HFLIB = ../../
 LIB = ../../..
 DFU = obj/$(SKETCH).ino.dfu 
-HEX = obj/$(SKETCH).ino.hex
 SRC = $(HFLIB)/src
 
 all: $(DFU)
@@ -17,7 +16,7 @@ $(DFU): $(SKETCH).ino $(SRC)/*.h $(SRC)/*/*.h
 
 upload:
 	../../utils/dfu-touch.py $(PORT)
-	$(HOME)/Documents/Arduino/hardware/arduino-STM32L4/stm32l4/tools/linux/stm32l4-upload \
+	$(HOME)/.arduino15/packages/arduino-STM32L4/stm32l4/tools/linux/stm32l4-upload \
 	   	0x1209 0x6669 obj/$(SKETCH).ino.dfu 10
 
 clean:
