--- a/examples/LadybugSbus/Makefile
+++ b/examples/LadybugSbus/Makefile
@@ -19,6 +19,10 @@ upload:
 	$(HOME)/.arduino15/packages/arduino-STM32L4/stm32l4/tools/linux/stm32l4-upload \
 	   	0x1209 0x6669 obj/$(SKETCH).ino.dfu 10
 
+unbrick:
+	$(HOME)/.arduino15/packages/arduino-STM32L4/stm32l4/tools/linux/stm32l4-upload \
+	   	0x1209 0x6669 obj/$(SKETCH).ino.dfu 10
+
 clean:
 	rm -rf obj
 
