--- a/webots/Makefile
+++ b/webots/Makefile
@@ -1,31 +1,31 @@
 cplusplus:
 	webots worlds/standard.wbt &
-	webots-controller controllers/cplusplus/cplusplus
+	webots-controller --stdout-redirect controllers/cplusplus/cplusplus
 
 cpptakeoff:
 	webots worlds/standard.wbt &
-	webots-controller controllers/cpptakeoff/cpptakeoff
+	webots-controller --stdout-redirect controllers/cpptakeoff/cpptakeoff
 
 haskell:
 	webots worlds/standard.wbt &
-	webots-controller controllers/haskell/haskell
+	webots-controller --stdout-redirect controllers/haskell/haskell
 
 python:
 	webots worlds/standard.wbt &
-	webots-controller controllers/python/python.py
+	webots-controller --stdout-redirect controllers/python/python.py
 
 pytakeoff:
 	webots worlds/standard.wbt &
-	webots-controller controllers/pytakeoff/pytakeoff.py
+	webots-controller --stdout-redirect controllers/pytakeoff/pytakeoff.py
 
 playback-motors:
 	webots worlds/standard.wbt &
-	webots-controller controllers/playback-motors/playback-motors.py
+	webots-controller --stdout-redirect controllers/playback-motors/playback-motors.py
 
 playback-demands:
 	webots worlds/standard.wbt &
-	webots-controller controllers/playback-demands/playback-demands.py
+	webots-controller --stdout-redirect controllers/playback-demands/playback-demands.py
 
 playback-pose:
 	webots worlds/supervised.wbt &
-	webots-controller controllers/playback-pose/playback-pose.py
+	webots-controller --stdout-redirect controllers/playback-pose/playback-pose.py
