--- a/webots/Makefile
+++ b/webots/Makefile
@@ -1,10 +1,24 @@
-cplusplus:
+#  Copyright (C) 2024 Simon D. Levy
+ 
+#  This program is free software: you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation, in version 3.
+# 
+#  This program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+#  GNU General Public License for more details.
+# 
+#  You should have received a copy of the GNU General Public License
+#  along with this program. If not, see <http:--www.gnu.org/licenses/>.
+
+'cplusplus:
 	webots worlds/standard.wbt &
 	/usr/local/webots/webots-controller --stdout-redirect controllers/cplusplus/cplusplus
 
 cpptakeoff:
 	webots worlds/standard.wbt &
-	/usr/local/webots/webots-controller --stdout-redirect controllers/cpptakeoff/cpptakeoff
+	/usr/local/webots/webots-controller controllers/cpptakeoff/cpptakeoff
 
 haskell:
 	webots worlds/standard.wbt &
@@ -16,16 +30,16 @@ python:
 
 pytakeoff:
 	webots worlds/standard.wbt &
-	/usr/local/webots/webots-controller --stdout-redirect controllers/pytakeoff/pytakeoff.py
+	/usr/local/webots/webots-controller controllers/pytakeoff/pytakeoff.py
 
 playback-motors:
 	webots worlds/standard.wbt &
-	/usr/local/webots/webots-controller --stdout-redirect controllers/playback-motors/playback-motors.py
+	/usr/local/webots/webots-controller controllers/playback-motors/playback-motors.py
 
 playback-demands:
 	webots worlds/standard.wbt &
-	/usr/local/webots/webots-controller --stdout-redirect controllers/playback-demands/playback-demands.py
+	/usr/local/webots/webots-controller controllers/playback-demands/playback-demands.py
 
 playback-pose:
 	webots worlds/supervised.wbt &
-	/usr/local/webots/webots-controller --stdout-redirect controllers/playback-pose/playback-pose.py
+	/usr/local/webots/webots-controller controllers/playback-pose/playback-pose.py
