--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=TinyFlight
+name=Hackflight
 version=0.1
 author= Simon D. Levy<simon.d.levy@gmail.com>
 maintainer=Simon D. Levy<simon.d.levy@gmail.com>
 sentence=Minimalist flight-control software
 paragraph=Minimalist flight-control software
 category=Other
-url=https://github.com/simondlevy/TinyFlight
+url=https://github.com/simondlevy/Hackflight
 architectures=*
-includes=
+includes=hackflight.h
