Renamed hackflight.h => hackflight.hpp

--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=Minimalist flight-control software
 category=Other
 url=https://github.com/simondlevy/Hackflight
 architectures=*
-includes=hackflight.h
+includes=hackflight.hpp
