Renamed takeoff => snn

--- a/attic/webots/controllers/snn/makefile
+++ b/attic/webots/controllers/snn/makefile
@@ -1,12 +1,8 @@
-# TeNNLab framework stuff ------------------------------------------
+APP = snn
 
 FDIR = $(HOME)/Desktop/framework
 
-CFLAGS = -O3 -std=c++11 -Wall -Wextra
-
 PDIR =  $(FDIR)/processors/risp
-
-# -------------------------------------------------------------------
 
 CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
@@ -18,9 +14,11 @@ LIBRARIES = $(FDIR)/lib/libframework.a \
 		    $(PDIR)/lib/libproc1.a \
 		    $(PDIR)/lib/libproc2.a
 
-CXX_SOURCES = takeoff.cpp
+CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
-all: takeoff
+CXX_SOURCES = $(APP).cpp
+
+all: $(APP)
 
 # Use the Webots C API in your C++ controller program
 USE_C_API = true
@@ -28,7 +26,7 @@ USE_C_API = true
 VERBOSE = 1
 
 edit:
-	vim takeoff.cpp
+	vim $(APP).cpp
 
 ### Do not modify: this includes Webots global Makefile.include
 null :=
