--- a/webots/controllers/snn/makefile
+++ b/webots/controllers/snn/makefile
@@ -1,8 +1,12 @@
-APP = snn
+# TeNNLab framework stuff ------------------------------------------
 
 FDIR = $(HOME)/Desktop/framework
 
+CFLAGS = -O3 -std=c++11 -Wall -Wextra
+
 PDIR =  $(FDIR)/processors/risp
+
+# -------------------------------------------------------------------
 
 CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
@@ -14,11 +18,9 @@ LIBRARIES = $(FDIR)/lib/libframework.a \
 		    $(PDIR)/lib/libproc1.a \
 		    $(PDIR)/lib/libproc2.a
 
-CFLAGS = -O3 -std=c++11 -Wall -Wextra
+CXX_SOURCES = snn.cpp
 
-CXX_SOURCES = $(APP).cpp
-
-all: $(APP)
+all: snn
 
 # Use the Webots C API in your C++ controller program
 USE_C_API = true
@@ -26,7 +28,7 @@ USE_C_API = true
 VERBOSE = 1
 
 edit:
-	vim $(APP).cpp
+	vim snn.cpp
 
 ### Do not modify: this includes Webots global Makefile.include
 null :=
