Restored webots/controllers/pytakeoff/

--- a/webots/makefile
+++ b/webots/makefile
@@ -34,6 +34,10 @@ sock:
 		--use_name_neuron '{"2":"xd","3":"xd","4":"theta_l","5":"theta_l","6":"thetad_l","7":"thetad_l","0":"x","1":"x","9":"left","8":"no action","10":"right"}' \
 		--show_spike_count --remove_unnecessary_neuron --set_num_screen_shot 1000 > /dev/null &
 
+pytakeoff:
+	webots worlds/standard.wbt &
+	/usr/local/webots/webots-controller --stdout-redirect controllers/pytakeoff/pytakeoff.py
+
 haskell:
 	webots worlds/standard.wbt &
 	/usr/local/webots/webots-controller --stdout-redirect controllers/haskell/haskell
