=More SNN socket

--- a/webots/makefile
+++ b/webots/makefile
@@ -28,9 +28,13 @@ cplusplus:
 
 snn:
 	webots worlds/standard.wbt &
-	/usr/local/webots/webots-controller controllers/snn/snn $(NEW_NETWORK)
+	/usr/local/webots/webots-controller controllers/snn/snn $(NEW_NETWORK) &
 
-sock:
+	@cd $(FDIR)/viz; love . -i '{"source":"request","port":$(VIZ_PORT),"host":$(VIZ_HOST)}'  -n $(NEW_NETWORK) \
+		--use_name_neuron '{"0":"z","1":"dz/dt","2":"motor"}' \
+		--show_spike_count --remove_unnecessary_neuron --set_num_screen_shot 1000 > /dev/null
+
+socktest:
 
 	$(FDIR)/cpp-apps/bin/polebalance_risp -a test -n $(OLD_NETWORK) \
 		--all_counts_stream '{"source":"serve","port":8100}' &
@@ -39,15 +43,6 @@ sock:
     #	--show_spike_count --remove_unnecessary_neuron --set_num_screen_shot 1000 > /dev/null
 
 	./vizproxy.py
-
-pytakeoff:
-
-	@webots worlds/standard.wbt &
-	@/usr/local/webots/webots-controller --stdout-redirect controllers/pytakeoff/pytakeoff.py &
-
-	@cd $(FDIR)/viz; love . -i '{"source":"request","port":$(VIZ_PORT),"host":$(VIZ_HOST)}'  -n $(NEW_NETWORK) \
-		--use_name_neuron '{"0":"z","1":"dz/dt","2":"motor"}' \
-		--show_spike_count --remove_unnecessary_neuron --set_num_screen_shot 1000 > /dev/null &
 
 haskell:
 	webots worlds/standard.wbt &
